--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@ __pycache__
 .vscode
 .ipynb_checkpoints
 venv
-*/.env
+*/*/.env
 36_exercises/stock-news-extrahard-start/stock-news-extrahard-start/.env
